Changed Finder to Full Name

--- a/Components/Pages/Update.razor
+++ b/Components/Pages/Update.razor
@@ -17,7 +17,7 @@ else
             <input type="text" class="form-control" id="clubName" @bind="item.Name" />
     </div>
     <div class="mb-3">
-        <label for="country" class="form-label">Finder</label>
+        <label for="country" class="form-label">Full Name</label>
         <input type="text" class="form-control" id="country" @bind="item.Finder" />
     </div>
     <div class="mb-3">
