added finder/owner to finder field

--- a/Components/Pages/ItemComponent.razor
+++ b/Components/Pages/ItemComponent.razor
@@ -137,7 +137,7 @@
                         </p>
                         @if (!string.IsNullOrEmpty(item.Finder))
                         {
-                            <p class="item-finder">Finder: @item.Finder</p>
+                            <p class="item-finder">Finder/Owner: @item.Finder</p>
                         }
                         else
                         {
